FIx agency wrong color - change from green to blue

--- a/src/theme/component/_sankey.scss
+++ b/src/theme/component/_sankey.scss
@@ -97,8 +97,8 @@
     cursor:pointer;
     &:hover {
       rect {
-        fill:$greenDark;
-        stroke:$greenDark;
+        fill:$brandBlue;
+        stroke:$brandBlue;
       }
       text {
         fill:$light;
